upgrade the manual $ improve the function of the app

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,8 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <finalName>orm_dario_jongsoo_p1</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
             </plugin>
             <plugin>
